Code Cleanup and remove OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ttgo-t-oi-plus]
-platform = espressif32
-board = ttgo-t-oi-plus
-framework = arduino
-monitor_speed = 115200
+[env]
 lib_deps = 
 	robtillaart/RunningAverage@^0.4.3
 	adafruit/Adafruit GFX Library@^1.11.3
 	bodmer/TFT_eSPI@^2.4.79
 	adafruit/Adafruit ADS1X15@^2.4.0
+
+[env:ttgo-t-oi-plus]
+platform = espressif32
+board = ttgo-t-oi-plus
+framework = arduino
+monitor_speed = 115200
+
+[env:seeed_xiao_esp32c3]
+platform = espressif32
+board = seeed_xiao_esp32c3
+framework = arduino
+monitor_speed = 115200
