--- a/platformio.ini
+++ b/platformio.ini
@@ -26,3 +26,9 @@ platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 monitor_speed = 115200
+
+[env:seeed_xiao]
+platform = atmelsam
+board = seeed_xiao
+framework = arduino
+monitor_speed = 115200
