Update TFT eSPI library

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 lib_deps = 
 	robtillaart/RunningAverage@^0.4.3
 	adafruit/Adafruit GFX Library@^1.11.3
-	bodmer/TFT_eSPI@^2.4.79
+	bodmer/TFT_eSPI@^2.5.0
 	adafruit/Adafruit ADS1X15@^2.4.0
 
 [env:ttgo-t-oi-plus]
@@ -38,5 +38,9 @@ monitor_speed = 115200
 platform = espressif32
 board = pico32
 framework = arduino
-upload_speed = 460800
 monitor_speed = 115200
+;lib_deps = 
+;	robtillaart/RunningAverage@^0.4.3
+;	adafruit/Adafruit GFX Library@^1.11.3
+;	bodmer/TFT_eSPI@^2.4.79
+;	adafruit/Adafruit ADS1X15@^2.4.0
