--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 lib_deps = 
 	robtillaart/RunningAverage@^0.4.3
 	adafruit/Adafruit GFX Library@^1.11.3
-	bodmer/TFT_eSPI@^2.5.0
+	bodmer/TFT_eSPI@^2.5.2
 	adafruit/Adafruit ADS1X15@^2.4.0
 
 [env:ttgo-t-oi-plus]
@@ -38,4 +38,11 @@ monitor_speed = 115200
 platform = espressif32
 board = pico32
 framework = arduino
+monitor_speed = 115200
+
+[env:um_tinys3]
+platform = espressif32
+board = um_tinys3
+framework = arduino
+board_build.mcu = esp32s3
 monitor_speed = 115200
