--- a/platformio.ini
+++ b/platformio.ini
@@ -46,3 +46,14 @@ board = um_tinys3
 framework = arduino
 board_build.mcu = esp32s3
 monitor_speed = 115200
+
+[env:esp32-s3-devkitc-1]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+
+; change microcontroller
+board_build.mcu = esp32s3
+
+; change MCU frequency
+board_build.f_cpu = 240000000L
