--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,10 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.3
 	bodmer/TFT_eSPI@^2.5.2
 	adafruit/Adafruit ADS1X15@^2.4.0
+	me-no-dev/AsyncTCP@^1.1.1
+	;me-no-dev/ESP Async WebServer@^1.2.3
+	ayushsharma82/AsyncElegantOTA@^2.2.7
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 
 [env:ttgo-t-oi-plus]
 platform = espressif32
