--- a/platformio.ini
+++ b/platformio.ini
@@ -61,3 +61,14 @@ board_build.mcu = esp32s3
 
 ; change MCU frequency
 board_build.f_cpu = 240000000L
+
+[env:nucleo_f446re]
+platform = ststm32
+board = nucleo_f446re
+framework = arduino
+
+; change microcontroller
+board_build.mcu = stm32f446ret6
+
+; change MCU frequency
+board_build.f_cpu = 180000000L
