--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,11 @@ platform = atmelsam
 board = seeed_xiao
 framework = arduino
 monitor_speed = 115200
+lib_ignore =
+	AsyncTCP
+	ESP Async WebServer
+	AsyncElegantOTA
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 
 [env:pico32]
 platform = espressif32
@@ -49,26 +54,5 @@ platform = espressif32
 board = um_tinys3
 framework = arduino
 board_build.mcu = esp32s3
-monitor_speed = 115200
-
-[env:esp32-s3-devkitc-1]
-platform = espressif32
-board = esp32-s3-devkitc-1
-framework = arduino
-
-; change microcontroller
-board_build.mcu = esp32s3
-
-; change MCU frequency
 board_build.f_cpu = 240000000L
-
-[env:nucleo_f446re]
-platform = ststm32
-board = nucleo_f446re
-framework = arduino
-
-; change microcontroller
-board_build.mcu = stm32f446ret6
-
-; change MCU frequency
-board_build.f_cpu = 180000000L
+monitor_speed = 115200
