--- a/platformio.ini
+++ b/platformio.ini
@@ -47,3 +47,6 @@ framework = arduino
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 monitor_speed = 115200
+
+[platformio]
+description = EANx Upcycler for ESP32 chipsets
