Adding Touch Screen Support

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,12 @@
 
 [env]
 lib_deps = 
-	robtillaart/RunningAverage@^0.4.3
-	adafruit/Adafruit GFX Library@^1.11.3
-	bodmer/TFT_eSPI@^2.5.2
+	robtillaart/RunningAverage@^0.4.5
 	adafruit/Adafruit ADS1X15@^2.4.0
+	bodmer/TFT_eSPI@^2.5.43
+	bodmer/TFT_eWidget@^0.0.6
+	adafruit/Adafruit GFX Library@^1.11.9
+	adafruit/Adafruit GC9A01A@^1.1.0
 
 [env:ttgo-t-oi-plus]
 platform = espressif32
@@ -25,8 +27,8 @@ monitor_speed = 115200
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-monitor_speed = 115200
-board_build.flash_mode = dio
+;monitor_speed = 115200
+;board_build.flash_mode = dio
 
 [env:seeed_xiao]
 platform = atmelsam
@@ -34,11 +36,15 @@ board = seeed_xiao
 framework = arduino
 monitor_speed = 115200
 
-[env:pico32]
+[env:denky32]
 platform = espressif32
-board = pico32
+board = denky32
 framework = arduino
-monitor_speed = 115200
+; change microcontroller
+board_build.mcu = esp32
+; change MCU frequency
+board_build.f_cpu = 240000000L
+
 
 [env:um_tinys3]
 platform = espressif32
@@ -47,6 +53,13 @@ framework = arduino
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 monitor_speed = 115200
+
+[env:lilygo-t-display-s3]
+platform = espressif32
+board = lilygo-t-display-s3
+framework = arduino
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
 
 [platformio]
 description = EANx Upcycler for ESP32 chipsets
